# create-context-graph

./: CHANGELOG.md  CLAUDE.md  Dockerfile.neo4j  README.md  ROADMAP.md  pyproject.toml  render.yaml
.github/workflows/: ci.yml  release.yml
demo/: .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
demo/backend/: pyproject.toml
demo/backend/app/: agent.py  config.py  constants.py  context_graph_client.py  gds_client.py  main.py  memory.py  models.py  routes.py  vector_client.py
demo/backend/scripts/: generate_data.py
demo/backend/tests/: test_routes.py
demo/cypher/: gds_projections.cypher  schema.cypher
demo/data/: _base.yaml  fixtures.json
demo/frontend/: package-lock.json  package.json
demo/frontend/app/: globals.css  layout.tsx  page.tsx
demo/frontend/components/: ChatInterface.tsx  ContextGraphView.tsx  DecisionTracePanel.tsx  DocumentBrowser.tsx  ErrorBoundary.tsx  Provider.tsx
demo/frontend/e2e/: app.spec.ts
demo/frontend/lib/: config.ts
demo/frontend/theme/: index.ts
docs/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs/docs/: intro.md  quick-start.md
docs/docs/explanation/: how-decision-traces-work.md  how-domain-ontologies-work.md  three-memory-types.md  why-context-graphs.md
docs/docs/how-to/: add-custom-domain.md  connect-claude-desktop.md  import-saas-data.md  switch-agent-frameworks.md  use-docker.md  use-neo4j-aura.md  use-neo4j-local.md
docs/docs/reference/: claude-code-schema.md  cli-options.md  domain-catalog.md  framework-comparison.md  generated-project-structure.md  google-workspace-schema.md
docs/docs/tutorials/: claude-code-sessions.md  customizing-domain-ontology.md  first-context-graph-app.md  google-workspace-decisions.md  import-chat-history.md  (+1 more)
npm-wrapper/: package.json
src/create_context_graph/: __init__.py  cli.py  config.py  custom_domain.py  generator.py  name_pools.py  ontology.py  renderer.py  wizard.py
tests/: conftest.py  test_chat_import.py  test_cli.py  test_config.py  test_connectors.py  test_custom_domain.py  test_doc_snippets.py  test_frontend_logic.py  test_generated_project.py  test_generated_tests.py  test_integration.py  test_ontology.py  test_renderer.py  test_security.py
(+91 files in other folders)
