[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "create-context-graph"
version = "0.1.1"
description = "Interactive CLI scaffolding tool for domain-specific context graph applications"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "William Lyon" },
]
keywords = ["neo4j", "context-graph", "ai-agent", "scaffolding", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "click>=8.1",
    "questionary>=2.0",
    "rich>=13.0",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "neo4j>=5.20",
]

[project.optional-dependencies]
generate = [
    "anthropic>=0.30",
    "openai>=1.0",
]
ingest = [
    "neo4j-agent-memory>=0.0.5",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
]
all = [
    "create-context-graph[generate,ingest]",
]

[project.scripts]
create-context-graph = "create_context_graph.cli:main"

[project.urls]
Homepage = "https://github.com/neo4j-labs/create-context-graph"
Repository = "https://github.com/neo4j-labs/create-context-graph"

[tool.hatch.build.targets.wheel]
packages = ["src/create_context_graph"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (run with --slow)",
]
